@@ -50,6 +50,8 @@ Fixes:
  * The Open_Anywhere power didn't fully work as intended. Patch by Covenent.
  * regrab*() functions removed ansi. Reported by Covenent. [MG]
  * munge() didn't play nice with ansi. [MG]
+ * @shutdown/reboot would cause hang unencrypted sockets for players with
+   both SSL and normal connections. Reported by Padraic. [SW]
 
 Functions:
  * Restrictions for the beep() function can now be modified with @function.
